[tool.poetry]
authors = ["Occam AI <support@occam.ai>, Mo <Mo@occam.ai>, Ahmed <ahmed@occam.ai>"]
description = "Occam's SDK"
name = "occam_agent_params"
version = "0.1.0.dev2"
packages = [{include = "occam_agent_params", from="src/python"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
pydantic="^2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.2.2"
pytest-cov="^4.0.0"
pytest-xdist = "^3.5.0"
coverage = "^7.4.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-vv -n 4 --cov --cov-report xml --cov-report term-missing --cov-fail-under=70"
filterwarnings = [
    "ignore::DeprecationWarning"
]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pylint, pyupgrade
ignore = ["E501"]
select = ["E", "F", "I", "PL", "UP", "W"]
